--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -1,101 +1,63 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
->
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+
 <head>
     <meta charset="UTF-8">
-    <title>Books Management System</title>
+    <title>KURSA4</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
           crossorigin="anonymous">
-    <style>
-        /* Кастомные стили для страницы */
-        body {
-            padding-top: 0px; /* Задаем отступ для фиксированного верхнего меню */
-            margin: 0; /* Убираем внешний отступ для body */
-        }
-        @media (max-width: 1200px) {
-            /* Стили для экранов шириной не более 1200px */
-            .container, .navbar {
-                max-width: 100%;
-            }
-            .navbar {
-                padding: 0;
-            }
-            .navbar-nav {
-                margin-left: auto; /* Сдвигаем элементы меню вправо */
-            }
-            .navbar-nav .nav-item {
-                margin-right: 10px; /* Расстояние между элементами меню */
-            }
-        }
-        @media (max-width: 720px) {
-            /* Стили для экранов шириной не более 720px */
-            .container {
-                max-width: 100%;
-            }
-        }
-        .navbar {
-            background-color: white; /* Цвет фона верхнего меню */
-            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); /* Тень */
-        }
-        .navbar-toggler-icon {
-            background-color: black; /* Цвет иконки бургер-меню */
-        }
-        .navbar-toggler {
-            border-color: black; /* Цвет границы бургер-меню */
-        }
-        .navbar-dark .navbar-nav .nav-link {
-            color: white; /* Цвет текста кнопок меню */
-        }
-        .navbar-dark .navbar-toggler-icon {
-            background-color: darkgrey; /* Цвет иконки бургер-меню в темном верхнем меню */
-        }
-        .navbar-toggler {
-            background-color: darkgrey; /* Цвет кнопки бургер-меню в темном верхнем меню */
-        }
-    </style>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-        <a class="navbar-brand" th:href="@{/index}">Books Management System</a>
+        <a class="navbar-brand" th:href="@{/index}">Student Management System</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <!-- Проверка, аутентифицирован ли пользователь -->
-                <li class="nav-item" th:if="${#authorization.expression('isAuthenticated()')}">
-                    <a class="nav-link" th:href="@{/list-books}">My Books</a>
-                </li>
-                <li class="nav-item" th:if="${#authorization.expression('isAuthenticated()')}">
-                    <a class="nav-link" th:href="@{/list-shops}">My Shops</a>
-                </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/about}">О приложении</a>
+                    <a class="nav-link active" aria-current="page" sec:authorize="isAuthenticated()"
+                       th:href="@{/list}">List Student</a>
                 </li>
+
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" sec:authorize="!isAuthenticated()"
+                       th:href="@{/login}">Login</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" sec:authorize="!isAuthenticated()"
+                       th:href="@{/register}">Register</a>
+                </li>
+
+                <li class="nav-item" th:if="${#authorization.expression('isAuthenticated()')}">
+                    <a class="nav-link active" th:href="@{/users}">Users</a>
+                </li>
+
+
+
             </ul>
             <ul class="navbar-nav">
-                <li class="nav-item" th:if="${#authorization.expression('isAuthenticated()') and
-                 #authorization.expression('hasRole(''ADMIN'')')}">
-                    <a class="nav-link" th:href="@{/users}">Users</a>
+
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" sec:authorize="(hasRole('ROLE_ADMIN'))"
+                       th:href="@{/users/action}">UsersAction</a>
                 </li>
-                <li class="nav-item" th:if="${#authorization.expression('isAuthenticated()') and
-                #authorization.expression('hasRole(''ADMIN'')')}">
-                    <a class="nav-link" th:href="@{/users-actions}">Logs</a>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" sec:authorize="(hasRole('ROLE_ADMIN'))">ADMIN</a>
                 </li>
-                <!-- Если аутентификация не выполнена, показать ссылки на вход и регистрацию -->
-                <li class="nav-item" th:unless="${#authorization.expression('isAuthenticated()')}">
-                    <a class="nav-link" th:href="@{/login}">Login</a>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" sec:authorize="(hasRole('ROLE_USER'))">USER</a>
                 </li>
-                <li class="nav-item" th:unless="${#authorization.expression('isAuthenticated()')}">
-                    <a class="nav-link" th:href="@{/register}">Register</a>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" sec:authorize="(hasRole('ROLE_READ'))">READ</a>
                 </li>
-                <!-- Если аутентификация выполнена, показать имя пользователя и кнопку "Logout" -->
                 <li class="nav-item" th:if="${#authorization.expression('isAuthenticated()')}">
                     <span class="nav-link" th:text="${#authentication.name}"></span>
                 </li>
@@ -109,24 +71,17 @@
     </div>
 </nav>
 <br/><br/>
-<div class="container">
+<div class="container-fluid">
     <div class="row">
-        <h1 class="text-center"> Система управления книгами </h1>
-        <br>
-        <h3 class="text-center">Курсовой проект студента группы РИВ-220908у</h3>
-        <h3 class="text-center">Выполнил Свалухин Александр Владимирович</h3>
-        <h3 class="text-center"><a href="https://github.com/servsav2022/books_project">https://github.com/servsav2022/books_project</a></h3>
+
+        <h3 class="text-center">
+            <a href="https://github.com/papakarlorabotaet">-open git://papakarlorabotaet</a>
+        </h3>
+
         <hr>
         <br><br>
         <h3 class="text-center">Проект написан на Java SpringBoot 2.7.18-SNAPSHOT</h3>
-        <h3 class="text-center">Использовалась PostgreSQL 16.1</h3>
-        <h3 class="text-center">Использовалась graalvm-jdk-17.0.9</h3>
-        <h3 class="text-center">Использовалась thymeleaf</h3>
-        <h3 class="text-center">Использовалась spring-security</h3>
-        <h3 class="text-center">Использовалась actuator</h3>
-        <h3 class="text-center">Использовалась lombok</h3>
-        <h3 class="text-center">Использовалась logback-clasic-1.4.14</h3>
-        <h3 class="text-center">Использовалась slf4j-api-2.0.7</h3>
+
 
     </div>
 </div>
