--- a/src/main/resources/templates/add-user-form.html
+++ b/src/main/resources/templates/add-user-form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="UTF-8">
@@ -25,8 +25,14 @@
             </ul>
             </ul>
             <ul class="navbar-nav">
-                <li class="nav-item" th:if="${#authorization.expression('isAuthenticated()')}">
-                    <span class="nav-link" th:text="${#authentication.getAuthorities()}"></span>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" sec:authorize="(hasRole('ROLE_ADMIN'))">ADMIN</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" sec:authorize="(hasRole('ROLE_USER'))">USER</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" sec:authorize="(hasRole('ROLE_READ'))">READ</a>
                 </li>
                 <li class="nav-item" th:if="${#authorization.expression('isAuthenticated()')}">
                     <span class="nav-link" th:text="${#authentication.name}" ></span>
@@ -40,28 +46,84 @@
 </nav>
 <div class="container">
 
+    <div th:if="${param.success}">
+        <div class="alert alert-info">
+            You have successfully add new user!
+        </div>
+    </div>
+
     <hr/>
 
-    <h3>Add New Student</h3>
+    <h3>Add New User</h3>
     <hr/>
 
-    <form th:action="@{/saveStudent}" th:object="${student}" method="POST">
+    <div class="card-body">
+        <form
+                method="post"
+                role="form"
+                th:action="@{/users/addUser/save}"
+                th:object="${user}"
+        >
 
-        <input type="text" th:field="*{name}" class="form-control col-4 mb-4" placeholder="Enter Name"/>
+            <div class="form-group mb-3">
+                <input
+                        class="form-control"
+                        id="firstName"
+                        name="firstName"
+                        placeholder="Enter first name"
+                        th:field="*{firstName}"
+                        type="text"
+                />
+                <p th:errors="*{firstName}" class="text-danger"
+                   th:if="${#fields.hasErrors('firstName')}"></p>
+            </div>
 
-        <input type="text" th:field="*{surname}" class="form-control col-4 mb-4" placeholder="Enter Surname"/>
+            <div class="form-group mb-3">
+                <input
+                        class="form-control"
+                        id="lastName"
+                        name="lastName"
+                        placeholder="Enter last name"
+                        th:field="*{lastName}"
+                        type="text"
+                />
+                <p th:errors="*{lastName}" class="text-danger"
+                   th:if="${#fields.hasErrors('lastName')}"></p>
+            </div>
 
-        <input type="text" th:field="*{faculty}" class="form-control col-4 mb-4" placeholder="Enter Faculty"/>
+            <div class="form-group mb-3">
+                <input
+                        class="form-control"
+                        id="email"
+                        name="email"
+                        placeholder="Enter email address"
+                        th:field="*{email}"
+                        type="email"
+                />
+                <p th:errors="*{email}" class="text-danger"
+                   th:if="${#fields.hasErrors('email')}"></p>
+            </div>
 
-        <input type="text" th:field="*{age}" class="form-control col-4 mb-4" placeholder="Enter Age"/>
+            <div class="form-group mb-3">
+                <input
+                        class="form-control"
+                        id="password"
+                        name="password"
+                        placeholder="Enter password"
+                        th:field="*{password}"
+                        type="password"
+                />
+                <p th:errors="*{password}" class="text-danger"
+                   th:if="${#fields.hasErrors('password')}"></p>
+            </div>
 
-        <button type="submit" class="btn btn-primary col-2">Save</button>
+            <button type="submit" class="btn btn-primary col-112">Save user</button>
+            <a th:href="@{/users}" class="btn btn-outline-primary">Back to listUser</a>
 
-        <input type="hidden" th:field="*{id}"/>
 
-    </form>
-    <hr/>
-    <a th:href="@{/list}">Back to list</a>
+        </form>
+    </div>
+
 </div>
 
 </body>
