--- a/src/main/resources/templates/delete-history-users-action.html
+++ b/src/main/resources/templates/delete-history-users-action.html
@@ -48,48 +48,23 @@
 
     <div th:if="${param.success}">
         <div class="alert alert-info">
-            You have successfully add new user!
+            You have successfully clear history users action!
         </div>
     </div>
 
     <hr/>
 
-    <h3>Add New User</h3>
+    <h3>Delete all users action</h3>
     <hr/>
 
     <div class="card-body">
         <form
                 method="post"
                 role="form"
-                th:action="@{/users/addUser/save}"
+                th:action="@{/users/action/clearForm/delete}"
                 th:object="${user}"
         >
 
-            <div class="form-group mb-3">
-                <input
-                        class="form-control"
-                        id="firstName"
-                        name="firstName"
-                        placeholder="Enter first name"
-                        th:field="*{firstName}"
-                        type="text"
-                />
-                <p th:errors="*{firstName}" class="text-danger"
-                   th:if="${#fields.hasErrors('firstName')}"></p>
-            </div>
-
-            <div class="form-group mb-3">
-                <input
-                        class="form-control"
-                        id="lastName"
-                        name="lastName"
-                        placeholder="Enter last name"
-                        th:field="*{lastName}"
-                        type="text"
-                />
-                <p th:errors="*{lastName}" class="text-danger"
-                   th:if="${#fields.hasErrors('lastName')}"></p>
-            </div>
 
             <div class="form-group mb-3">
                 <input
@@ -117,8 +92,8 @@
                    th:if="${#fields.hasErrors('password')}"></p>
             </div>
 
-            <button type="submit" class="btn btn-primary col-112">Save user</button>
-            <a th:href="@{/users}" class="btn btn-outline-primary">Back to listUser</a>
+            <button type="submit" class="btn btn-danger col-112">DeleteAllUsersAction</button>
+            <a th:href="@{/users/action}" class="btn btn-outline-primary">Back to Users Action</a>
 
 
         </form>
