--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
 >
 <head>
   <meta charset="UTF-8">
-  <title>Student Management System</title>
+  <title>KURSA4</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
         rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
@@ -12,7 +13,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
+  <div class="container">
     <a class="navbar-brand" th:href="@{/index}">Student Management System</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,19 +21,53 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" sec:authorize="!isAuthenticated()"
+               th:href="@{/login}">Login</a>
+         </li>
+
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" th:href="@{/login}">Login</a>
+          <a class="nav-link active" aria-current="page" sec:authorize="!isAuthenticated()"
+             th:href="@{/register}">Register</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" th:href="@{/register}">Register</a>
+        <li class="nav-item" sec:authorize="!isAuthenticated()">
+          <a class="nav-link active" th:href="@{/users}">Users</a>
         </li>
+                <li class="nav-item">
+          <a class="nav-link" th:href="@{/about}">About</a>
+            </li>
+      </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" sec:authorize="(hasRole('ROLE_ADMIN'))"
+               th:href="@{/users/action}">UsersAction</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" sec:authorize="(hasRole('ROLE_ADMIN'))">ADMIN</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" sec:authorize="(hasRole('ROLE_USER'))">USER</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" sec:authorize="(hasRole('ROLE_READ'))">READ</a>
+          </li>
+          <li class="nav-item" th:if="${#authorization.expression('isAuthenticated()')}">
+            <span class="nav-link" th:text="${#authentication.name}"></span>
+          </li>
+          <li class="nav-item" th:if="${#authorization.expression('isAuthenticated()')}">
+            <form th:action="@{/logout}" method="post">
+              <button type="submit" class="nav-link btn btn-link">Logout</button>
+            </form>
+          </li>
+        </ul>
     </div>
   </div>
 </nav>
 <br/><br/>
 <div class="container">
   <div class="row">
-    <h1 class="text-center"> Student Management Systemw </h1>
+    <h1 class="text-center"> Student Management System </h1>
   </div>
 </div>
 </body>
