--- a/src/main/resources/templates/permission-denied.html
+++ b/src/main/resources/templates/permission-denied.html
@@ -1,10 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="UTF-8">
-  <title>$Title$</title>
+  <title>KURSA4</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+        crossorigin="anonymous">
 </head>
 <body>
-$END$
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container">
+    <a class="navbar-brand" th:href="@{/index}">Student Management System</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" th:href="@{/list}">List Student</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" th:href="@{/about}">About</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav">
+
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" sec:authorize="(hasRole('ROLE_ADMIN'))"
+             th:href="@{/users/action}">UsersAction</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" sec:authorize="(hasRole('ROLE_ADMIN'))">ADMIN</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" sec:authorize="(hasRole('ROLE_USER'))">USER</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" sec:authorize="(hasRole('ROLE_READ'))">READ</a>
+        </li>
+        <li class="nav-item" th:if="${#authorization.expression('isAuthenticated()')}">
+          <span class="nav-link" th:text="${#authentication.name}"></span>
+        </li>
+
+
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" th:href="@{/logout}">Logout</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<br/><br/>
+<div class="container">
+  <div class="row">
+    <h1 class="text-center"> Permission denied </h1>
+  </div>
+  <div class="row">
+    <h5 class="text-center"> ask for more administrator </h5>
+  </div>
+</div>
 </body>
 </html>
