--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
->
+      xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Student Management System</title>
@@ -12,7 +12,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
+    <div class="container">
         <a class="navbar-brand" th:href="@{/index}">Student Management System</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,23 +23,36 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" th:href="@{/login}">Login</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/about}">About</a>
+
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page"
+                       th:href="@{/users/action}">UsersAction</a>
+                </li>
+
+
+                </li>
             </ul>
         </div>
     </div>
 </nav>
-<br/><br/><br/>
-<div class="container">
-    <div class="row col-md-8 offset-md-2">
-        <div class="card">
-            <div class="card-header">
-                <h2 class="text-center">Registration</h2>
-            </div>
+<br/><br/>
+<div class="container" sec:authorize="!isAuthenticated()">
+    <div class="row">
+        <div class="col-md-6 offset-md-3">
+
             <div th:if="${param.success}">
                 <div class="alert alert-info">
                     You have successfully registered our app!
                 </div>
             </div>
-            <div class="card-body">
+            <div class="card">
+                <div class="card-header">
+                    <h2 class="text-center">Registration</h2>
+                </div>
+
+                <div class="card-body">
                 <form
                         method="post"
                         role="form"
@@ -102,11 +115,14 @@
                            th:if="${#fields.hasErrors('password')}"></p>
                     </div>
                     <div class="form-group">
-                        <button class="btn btn-primary" type="submit">Register</button>
+                        <button class="btn btn-outline-primary" type="submit">Register</button>
                         <span>Already registered? <a th:href="@{/login}">Login here</a></span>
                     </div>
+
                 </form>
             </div>
+            </div>
+
         </div>
     </div>
 </div>
