--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
->
+      xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="UTF-8">
-  <title>Registration and Login System</title>
+  <title>KURSA4</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
         rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
@@ -12,8 +12,8 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" th:href="@{/index}">Registration and Login System</a>
+  <div class="container">
+    <a class="navbar-brand" th:href="@{/index}">Student Management System</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -21,10 +21,34 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" th:href="@{/logout}">Logout</a>
+          <a class="nav-link active" aria-current="page" th:href="@{/list}">Students</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" th:href="@{/list}">Students</a>
+          <a class="nav-link" th:href="@{/about}">About</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav">
+
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" sec:authorize="(hasRole('ROLE_ADMIN'))"
+             th:href="@{/users/action}">UsersAction</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" sec:authorize="(hasRole('ROLE_ADMIN'))">ADMIN</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" sec:authorize="(hasRole('ROLE_USER'))">USER</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" sec:authorize="(hasRole('ROLE_READ'))">READ</a>
+        </li>
+        <li class="nav-item" th:if="${#authorization.expression('isAuthenticated()')}">
+          <span class="nav-link" th:text="${#authentication.name}"></span>
+        </li>
+        <li class="nav-item" th:if="${#authorization.expression('isAuthenticated()')}">
+          <form th:action="@{/logout}" method="post">
+            <button type="submit" class="nav-link btn btn-link">Logout</button>
+          </form>
         </li>
       </ul>
 
@@ -35,12 +59,23 @@
   <div class="row col-md-10">
     <h2>List of Registered Users</h2>
   </div>
+  <hr/>
+  <a th:href="@{/users/addUser}" class="btn btn-outline-primary">Add User</a>
+  <br/>
+
   <table class="table table-bordered table-hover">
-    <thead class="table-dark">
+    <thead class="table-white">
     <tr>
       <th>First Name</th>
       <th>Last Name</th>
       <th>Email</th>
+      <th>Role</th>
+      <th>Settings</th>
+
+
+
+
+
     </tr>
     </thead>
     <tbody>
@@ -48,6 +83,21 @@
       <td th:text="${user.firstName}"></td>
       <td th:text="${user.lastName}"></td>
       <td th:text="${user.email}"></td>
+      <td th:text="${user.roles}"></td>
+
+      <td>
+
+          <form th:action="@{/userPermissions}" method="post">
+            <input type="hidden" name="email" th:value="${user.email}" />
+            <select  class="custom-select" name="role" size="1" >
+              <option th:each="role : ${userListOfRole}" th:value="${role}" th:selected="${user.roles.contains(role)}" th:text="${role}"></option>
+            </select>
+            <button type="submit" class="btn btn-outline-success">updateRole</button>
+            <a th:href="@{/deleteUser(userEmail=${user.getEmail()})}" class="btn btn-outline-danger ml-4">Delete</a>
+          </form>
+
+      </td>
+
     </tr>
     </tbody>
   </table>
