--- a/src/main/resources/templates/usersAction.html
+++ b/src/main/resources/templates/usersAction.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
->
+      xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="UTF-8">
   <title>KURSA4</title>
@@ -24,12 +24,21 @@
           <a class="nav-link active" aria-current="page" th:href="@{/list}">Students</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link active" aria-current="page" th:href="@{/users}">Users</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" th:href="@{/about}">About</a>
         </li>
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <span class="top-nav" th:text="${#authentication.getAuthorities()}"></span>
+          <a class="nav-link" aria-current="page" sec:authorize="(hasRole('ROLE_ADMIN'))">ADMIN</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" sec:authorize="(hasRole('ROLE_USER'))">USER</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" sec:authorize="(hasRole('ROLE_READ'))">READ</a>
         </li>
         <li class="nav-item" th:if="${#authorization.expression('isAuthenticated()')}">
           <span class="nav-link" th:text="${#authentication.name}"></span>
@@ -46,50 +55,32 @@
 </nav>
 <div class="container">
   <div class="row col-md-10">
-    <h2>List of Registered Users</h2>
+    <h2>List of User Action</h2>
   </div>
   <hr/>
-  <a th:href="@{/users/addUser}" class="btn btn-outline-primary">Add User</a>
+  <a th:href="@{/users/action/clearForm}" class="btn btn-danger">Clear history</a>
   <br/>
 
   <table class="table table-bordered table-hover">
     <thead class="table-white">
     <tr>
-      <th>First Name</th>
-      <th>Last Name</th>
+      <th>UserRole</th>
       <th>Email</th>
-      <th>Role</th>
-      <th>Settings</th>
-
-
-
-
-
+      <th>Date</th>
+      <th>UserAction</th>
     </tr>
+
     </thead>
+
     <tbody>
-    <tr th:each="user : ${users}">
-      <td th:text="${user.getFirstName()}"></td>
-      <td th:text="${user.getLastName()}"></td>
-      <td th:text="${user.getEmail()}"></td>
-      <td th:text="${user.roles}"></td>
+    <tr th:each="userAction : ${usersAction}">
+      <td th:text="${userAction.getRole()}"></td>
+      <td th:text="${userAction.getUserEmail()}"></td>
+      <td th:text="${userAction.getActionDate()}"></td>
+      <td th:text="${userAction.getAction()}"></td>
 
-      <td>
-
-          <form th:action="@{/makeAdmin}" method="post">
-            <input type="hidden" name="email" th:value="${user.email}" />
-            <select  class="custom-select" name="role" size="1" >
-              <option th:each="role : ${userListOfRole}" th:value="${role}" th:selected="${user.roles.contains(role)}" th:text="${role}"></option>
-            </select>
-
-            <td><button type="submit" class="btn btn-outline-success">updateRole</button></td>
-
-          </form>
-          <td>
-            <a th:href="@{/deleteUser(userEmail=${user.getEmail()})}" class="btn btn-outline-danger ml-4">Delete</a>
-          </td>
-      </td>
-
+      </tr>
+    </td>
     </tr>
     </tbody>
   </table>
